# atoms-visualization

./: .gitignore  main.py  parsing_1.py  pyproject.toml
.spyproject/config/: workspace.ini
input/: arraymap.c.edn
